--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -1,206 +1,215 @@
+items:
 - name: Dokumentation om Security Center
   href: index.yml
 - name: Översikt
   items:
-    - name: Om Security Center
-      href: security-center-intro.md
+  - name: Om Security Center
+    href: security-center-intro.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Azure-prenumerationer
-      href: security-center-get-started.md
-    - name: Windows-datorer
-      href: quick-onboard-windows-computer.md
-    - name: Linux-datorer
-      href: quick-onboard-linux-computer.md
-    - name: Säkerhetslösningar
-      href: quick-security-solutions.md
+  - name: Azure-prenumerationer
+    href: security-center-get-started.md
+  - name: Windows-datorer
+    href: quick-onboard-windows-computer.md
+  - name: Linux-datorer
+    href: quick-onboard-linux-computer.md
+  - name: Säkerhetslösningar
+    href: quick-security-solutions.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Definiera säkerhetsprinciper
-      href: tutorial-security-policy.md
-    - name: Skydda dina resurser
-      href: tutorial-protect-resources.md
-    - name: Svara på incidenter
-      href: tutorial-security-incident.md
+  - name: Definiera säkerhetsprinciper
+    href: tutorial-security-policy.md
+  - name: Skydda dina resurser
+    href: tutorial-protect-resources.md
+  - name: Svara på incidenter
+    href: tutorial-security-incident.md
 - name: Begrepp
   items:
-    - name: Behörigheter
-      href: security-center-permissions.md
-    - name: Datasäkerhet
-      href: security-center-data-security.md
+  - name: Behörigheter
+    href: security-center-permissions.md
+  - name: Datasäkerhet
+    href: security-center-data-security.md
 - name: Instruktionsguider
   items:
-    - name: Uppgradera till avancerad säkerhet
-      href: security-center-onboarding.md
-    - name: Ange säkerhetsprincip
-      href: security-center-policies-overview.md
+  - name: Uppgradera till avancerad säkerhet
+    href: security-center-onboarding.md
+  - name: Ange säkerhetsprincip
+    href: security-center-policies-overview.md
+    items:
+    - name: Datainsamling
+      href: security-center-enable-data-collection.md
+    - name: Principdefinitioner
+      href: security-center-policies.md
+    - name: E-postmeddelanden
+      href: security-center-provide-security-contact-details.md
+    - name: Prisnivå
+      href: security-center-pricing.md
+    - name: Säkerhetskonfigurationer
+      href: security-center-customize-os-security-config.md
+    - name: Säkerhetsprincip med Azure-princip
+      href: security-center-azure-policy.md
+    - name: Synlighet i hela klientorganisationen
+      href: security-center-management-groups.md
+  - name: Implementera säkerhetsrekommendationer
+    href: security-center-recommendations.md
+  - name: Övervaka säkerhetshälsa
+    href: security-center-monitoring.md
+    items:
+    - name: Säkerhet för Compute och appar
+      href: security-center-virtual-machine-recommendations.md
       items:
-        - name: Datainsamling
-          href: security-center-enable-data-collection.md
-        - name: Principdefinitioner
-          href: security-center-policies.md
-        - name: E-postmeddelanden
-          href: security-center-provide-security-contact-details.md
-        - name: Prisnivå
-          href: security-center-pricing.md
-        - name: Säkerhetskonfigurationer
-          href: security-center-customize-os-security-config.md
-        - name: Säkerhetsprincip med Azure-princip
-          href: security-center-azure-policy.md
-        - name: Synlighet i hela klientorganisationen
-          href: security-center-management-groups.md
-    - name: Implementera säkerhetsrekommendationer
-      href: security-center-recommendations.md
-    - name: Övervaka säkerhetshälsa
-      href: security-center-monitoring.md
+      - name: Tillämpa diskkryptering
+        href: security-center-apply-disk-encryption.md
+      - name: Tillämpa systemuppdateringar
+        href: security-center-apply-system-updates.md
+      - name: Aktivera kryptering för lagringskonto
+        href: security-center-enable-encryption-for-storage-account.md
+      - name: Aktivera VM-Agent
+        href: security-center-enable-vm-agent.md
+      - name: Installera slutpunktsskydd
+        href: security-center-install-endpoint-protection.md
+      - name: Starta om datorn efter uppdateringarna
+        href: security-center-apply-system-updates.md#reboot-after-system-updates
+      - name: Åtgärda säkerhetskonfigurationer
+        href: security-center-remediate-os-vulnerabilities.md
+      - name: Uppdatera OS-versionen
+        href: security-center-update-os-version.md
+      - name: Sårbarhetsbedömning inte installerad
+        href: security-center-vulnerability-assessment-recommendations.md
+      - name: Lägg till en brandvägg för webbappar
+        href: security-center-add-web-application-firewall.md
+      - name: Slutföra programskydd
+        href: security-center-add-web-application-firewall.md#finalize-application-protection
+    - name: Nätverkssäkerhet
+      href: security-center-network-recommendations.md
       items:
-        - name: Säkerhet för Compute och appar
-          href: security-center-virtual-machine-recommendations.md
-          items:
-            - name: Tillämpa diskkryptering
-              href: security-center-apply-disk-encryption.md
-            - name: Tillämpa systemuppdateringar
-              href: security-center-apply-system-updates.md
-            - name: Aktivera kryptering för lagringskonto
-              href: security-center-enable-encryption-for-storage-account.md
-            - name: Aktivera VM-Agent
-              href: security-center-enable-vm-agent.md
-            - name: Installera slutpunktsskydd
-              href: security-center-install-endpoint-protection.md
-            - name: Starta om datorn efter uppdateringarna
-              href: 'security-center-apply-system-updates.md#reboot-after-system-updates'
-            - name: Åtgärda säkerhetskonfigurationer
-              href: security-center-remediate-os-vulnerabilities.md
-            - name: Uppdatera OS-versionen
-              href: security-center-update-os-version.md
-            - name: Sårbarhetsbedömning inte installerad
-              href: security-center-vulnerability-assessment-recommendations.md
-            - name: Lägg till en brandvägg för webbappar
-              href: security-center-add-web-application-firewall.md
-            - name: Slutföra programskydd
-              href: 'security-center-add-web-application-firewall.md#finalize-application-protection'
-        - name: Nätverkssäkerhet
-          href: security-center-network-recommendations.md
-          items:
-            - name: Lägg till en nästa generations brandvägg
-              href: security-center-add-next-generation-firewall.md
-            - name: Aktivera nätverkssäkerhetsgrupper
-              href: security-center-enable-network-security-groups.md
-            - name: Begränsa åtkomst via Internet-riktade slutpunkter
-              href: security-center-restrict-access-through-internet-facing-endpoints.md
-            - name: Dirigera trafiken endast via NGFW
-              href: 'security-center-add-next-generation-firewall.md#route-traffic-through-ngfw-only'
-        - name: Lagring och datasäkerhet
-          href: security-center-sql-service-recommendations.md
-          items:
-            - name: Aktivera granskning och hotidentifiering på SQL-databaser
-              href: security-center-enable-auditing-on-sql-databases.md
-            - name: Aktivera granskning och hotidentifiering på SQL-servrar
-              href: security-center-enable-auditing-on-sql-servers.md
-            - name: Aktivera transparent datakryptering
-              href: security-center-enable-transparent-data-encryption.md
-        - name: Identitet och åtkomst
-          href: security-center-identity-access.md
-    - name: Tillämpa molnskydd
+      - name: Lägg till en nästa generations brandvägg
+        href: security-center-add-next-generation-firewall.md
+      - name: Aktivera nätverkssäkerhetsgrupper
+        href: security-center-enable-network-security-groups.md
+      - name: Begränsa åtkomst via Internet-riktade slutpunkter
+        href: security-center-restrict-access-through-internet-facing-endpoints.md
+      - name: Dirigera trafiken endast via NGFW
+        href: security-center-add-next-generation-firewall.md#route-traffic-through-ngfw-only
+    - name: Lagring och datasäkerhet
+      href: security-center-sql-service-recommendations.md
       items:
-        - name: Just-in-time-åtkomst
-          href: security-center-just-in-time.md
-        - name: Anpassningsbara programkontroller
-          href: security-center-adaptive-application.md
-        - name: Övervakning av filintegritet
-          href: security-center-file-integrity-monitoring.md
-    - name: Hantera säkerhetslösningar
-      href: security-center-partner-integration.md
-      items:
-        - name: Anslutna lösningar
-          href: security-center-partner-solutions.md
-        - name: Identifierade lösningar
-          href: 'security-center-partner-integration.md#discovered-solutions'
-        - name: Ansluta externa lösningar
-          href: quick-security-solutions.md
-        - name: Ansluta Application Gateway
-          href: security-center-connect-application-gateway.md
-        - name: Ansluta Microsoft ATA
-          href: security-center-ata-integration.md
-        - name: Ansluta Azure AD Identity Protection
-          href: security-center-aadip-integration.md
-        - name: Dataexport till SIEM
-          href: security-center-export-data-to-siem.md
-    - name: Undersöka hot
-      href: security-center-detection-capabilities.md
-      items:
-        - name: Säkerhetsaviseringar
-          href: security-center-managing-and-responding-alerts.md
-        - name: Säkerhetsincidenter
-          href: security-center-incident.md
-        - name: Hotrapporter
-          href: security-center-threat-report.md
-        - name: Aviseringstyper
-          href: security-center-alerts-type.md
-        - name: Anpassade aviseringar
-          href: security-center-custom-alert.md
-        - name: Aviseringsverifiering
-          href: security-center-alert-validation.md
-        - name: Karta för hotinformation
-          href: security-center-threat-intel.md
-        - name: Undersökning
-          href: security-center-investigation.md
-        - name: Hantera användardata för undersökning
-          href: security-center-investigation-user-data.md
-    - name: Automatisera säkerhetsarbetsflöden
-      items:
-        - name: Logic Apps-spelböcker
-          href: security-center-playbooks.md
-        - name: Visa händelser
-          href: security-center-events-dashboard.md
-        - name: Search
-          href: security-center-search.md
-        - name: Granska efterlevnad (REST)
-          href: security-center-review-policy-compliance.md
-    - name: Scenarier
-      items:
-        - name: Incidenthantering
-          href: security-center-incident-response.md
-        - name: Använda rekommendationer för att förbättra säkerheten
-          href: security-center-using-recommendations.md
-    - name: Felsöka
-      href: security-center-troubleshooting-guide.md
+      - name: Aktivera granskning och hotidentifiering på SQL-databaser
+        href: security-center-enable-auditing-on-sql-databases.md
+      - name: Aktivera granskning och hotidentifiering på SQL-servrar
+        href: security-center-enable-auditing-on-sql-servers.md
+      - name: Aktivera transparent datakryptering
+        href: security-center-enable-transparent-data-encryption.md
+    - name: Identitet och åtkomst
+      href: security-center-identity-access.md
+  - name: Tillämpa molnskydd
+    items:
+    - name: Just-in-time-åtkomst
+      href: security-center-just-in-time.md
+    - name: Anpassningsbara programkontroller
+      href: security-center-adaptive-application.md
+    - name: Övervakning av filintegritet
+      href: security-center-file-integrity-monitoring.md
+  - name: Hantera säkerhetslösningar
+    href: security-center-partner-integration.md
+    items:
+    - name: Anslutna lösningar
+      href: security-center-partner-solutions.md
+    - name: Identifierade lösningar
+      href: security-center-partner-integration.md#discovered-solutions
+    - name: Ansluta externa lösningar
+      href: quick-security-solutions.md
+    - name: Ansluta Application Gateway
+      href: security-center-connect-application-gateway.md
+    - name: Ansluta Microsoft ATA
+      href: security-center-ata-integration.md
+    - name: Ansluta Azure AD Identity Protection
+      href: security-center-aadip-integration.md
+    - name: Dataexport till SIEM
+      href: security-center-export-data-to-siem.md
+  - name: Undersöka hot
+    href: security-center-detection-capabilities.md
+    items:
+    - name: Säkerhetsaviseringar
+      href: security-center-managing-and-responding-alerts.md
+    - name: Säkerhetsincidenter
+      href: security-center-incident.md
+    - name: Hotrapporter
+      href: security-center-threat-report.md
+    - name: Aviseringstyper
+      href: security-center-alerts-type.md
+    - name: Anpassade aviseringar
+      href: security-center-custom-alert.md
+    - name: Aviseringsverifiering
+      href: security-center-alert-validation.md
+    - name: Karta för hotinformation
+      href: security-center-threat-intel.md
+    - name: Undersökning
+      href: security-center-investigation.md
+    - name: Hantera användardata för undersökning
+      href: security-center-investigation-user-data.md
+  - name: Automatisera säkerhetsarbetsflöden
+    items:
+    - name: Logic Apps-spelböcker
+      href: security-center-playbooks.md
+    - name: Visa händelser
+      href: security-center-events-dashboard.md
+    - name: Search
+      href: security-center-search.md
+    - name: Granska efterlevnad (REST)
+      href: security-center-review-policy-compliance.md
+    - name: Utvärdera prenumerationer (REST)
+      href: security-center-compliance-rest-api.md
+  - name: Scenarier
+    items:
+    - name: Incidenthantering
+      href: security-center-incident-response.md
+    - name: Använda rekommendationer för att förbättra säkerheten
+      href: security-center-using-recommendations.md
+  - name: Felsöka
+    href: security-center-troubleshooting-guide.md
 - name: Referens
   items:
-    - name: 'REST API:er'
-      href: 'https://docs.microsoft.com/rest/api/securitycenter/'
-    - name: Tjänstuppdateringar
-      href: 'https://azure.microsoft.com/updates/?product=security-center'
+  - name: REST API:er
+    href: https://docs.microsoft.com/rest/api/securitycenter/
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=security-center
 - name: Resurser
   items:
-    - name: Hantera användardata
-      href: security-center-privacy.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: security-center-faq.md
-    - name: Plattformar som stöds
-      href: security-center-os-coverage.md
-    - name: Plattformsmigrering
-      href: security-center-platform-migration.md
-    - name: Vanliga frågor och svar om plattformsmigrering
-      href: security-center-platform-migration-faq.md
-    - name: Planering och drift
-      href: security-center-planning-and-operations-guide.md
-    - name: Säkerhet i Azure
-      href: /azure/security/
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
-    - name: Beredskapsöversikt
-      href: security-center-readiness-roadmap.md
-    - name: 'Blogg om säkerhet, sekretess och efterlevnad i Azure'
-      href: 'http://blogs.msdn.com/b/azuresecurity/'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/search?q=security-center'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/documentation/videos/index/?services=security-center'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/security-center/'
-    - name: Tjänstuppdateringar
-      href: 'https://azure.microsoft.com/updates/?product=security-center'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
+  - name: Hantera användardata
+    href: security-center-privacy.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: security-center-faq.md
+  - name: Plattformar som stöds
+    href: security-center-os-coverage.md
+  - name: Plattformsmigrering
+    href: security-center-platform-migration.md
+  - name: Vanliga frågor och svar om plattformsmigrering
+    href: security-center-platform-migration-faq.md
+  - name: Planering och drift
+    href: security-center-planning-and-operations-guide.md
+  - name: Säkerhet i Azure
+    href: /azure/security/
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=security-identity
+  - name: Beredskapsöversikt
+    href: security-center-readiness-roadmap.md
+  - name: Blogg om säkerhet, sekretess och efterlevnad i Azure
+    href: http://blogs.msdn.com/b/azuresecurity/
+  - name: Stack Overflow
+    href: https://stackoverflow.com/search?q=security-center
+  - name: Videoklipp
+    href: https://azure.microsoft.com/documentation/videos/index/?services=security-center
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/security-center/
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=security-center
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+ms.openlocfilehash: c382c8e4d17352d7f87e82fe9a03a4c2e30880b8
+ms.sourcegitcommit: 58c5cd866ade5aac4354ea1fe8705cee2b50ba9f
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/24/2018
+ms.locfileid: "42810182"
